Fix spacing and change h1 to h2.

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ h1 {
 }
 
 h2 {
-  font-size: 2em;
+  font-size: 1.8em;
 }
 
 h3 {
@@ -57,7 +57,7 @@ nav {
   padding: 16px;
   justify-content: center;
   align-items: center;
-  width: 90vw;
+  width: 95vw;
   max-width: 900px;
   margin: 0 auto;
   left: 0;
@@ -80,7 +80,7 @@ nav ul {
 
 nav ul li {
   margin: 16px;
-  font-size: 1.3em;
+  font-size: 20px;
 }
 
 footer {
@@ -97,10 +97,12 @@ footer p {
 
 .container {
   width: 100vw;
+  max-width: 900px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 72px;
+  padding: 112px 16px 0 16px;
 }
 
 .home-card {
@@ -111,7 +113,7 @@ footer p {
   min-height: 400px;
   justify-content: space-between;
   padding: 32px;
-  margin-top: 64px;
+  margin-bottom: 48px;
   border-radius: 4px;
 }
 
